Made the map on the api page bigger to prevent the footer from having whitespace below it.

--- a/public/CSS/api.css
+++ b/public/CSS/api.css
@@ -4,7 +4,7 @@
 }
 
 .mapRow {
-	height: 200px;
+	height: 400px;
 	margin-bottom: 4rem;
 	margin-top: 5rem;
 }
